add image for company's brand and update color

--- a/css/resume.css
+++ b/css/resume.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-resume/blob/master/LICENSE)
  */
 body {
-  background-color: #240a41;
+  background-color: #80847E;
   font-family: 'Open Sans', serif;
   padding-top: 54px;
   color: #b1b1b1;
