--- a/css/custom.css
+++ b/css/custom.css
@@ -5,7 +5,7 @@ body {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/header-bg.webp");
+  background-image: url("../media/Toei_Azarothis.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center;
